// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`jsonpath_encoding.sql > line 1 1`] = `[Error: syntax error at or near "\\"]`;

exports[`jsonpath_encoding.sql > line 13 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 113,
                "val": {
                  "TypeCast": {
                    "arg": {
                      "A_Const": {
                        "location": 113,
                        "sval": {
                          "sval": ""\\u"",
                        },
                      },
                    },
                    "location": 119,
                    "typeName": {
                      "location": 121,
                      "names": [
                        {
                          "String": {
                            "sval": "jsonpath",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`jsonpath_encoding.sql > line 18 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 37,
                "val": {
                  "TypeCast": {
                    "arg": {
                      "A_Const": {
                        "location": 37,
                        "sval": {
                          "sval": ""\\u00"",
                        },
                      },
                    },
                    "location": 45,
                    "typeName": {
                      "location": 47,
                      "names": [
                        {
                          "String": {
                            "sval": "jsonpath",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`jsonpath_encoding.sql > line 19 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 37,
                "val": {
                  "TypeCast": {
                    "arg": {
                      "A_Const": {
                        "location": 37,
                        "sval": {
                          "sval": ""\\u000g"",
                        },
                      },
                    },
                    "location": 47,
                    "typeName": {
                      "location": 49,
                      "names": [
                        {
                          "String": {
                            "sval": "jsonpath",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`jsonpath_encoding.sql > line 20 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 39,
                "val": {
                  "TypeCast": {
                    "arg": {
                      "A_Const": {
                        "location": 39,
                        "sval": {
                          "sval": ""\\u0000"",
                        },
                      },
                    },
                    "location": 49,
                    "typeName": {
                      "location": 51,
                      "names": [
                        {
                          "String": {
                            "sval": "jsonpath",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`jsonpath_encoding.sql > line 21 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 28,
                "val": {
                  "TypeCast": {
                    "arg": {
                      "A_Const": {
                        "location": 28,
                        "sval": {
                          "sval": ""\\uaBcD"",
                        },
                      },
                    },
                    "location": 38,
                    "typeName": {
                      "location": 40,
                      "names": [
                        {
                          "String": {
                            "sval": "jsonpath",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`jsonpath_encoding.sql > line 22 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 88,
                "name": "correct_in_utf8",
                "val": {
                  "TypeCast": {
                    "arg": {
                      "A_Const": {
                        "location": 88,
                        "sval": {
                          "sval": ""\\ud83d\\ude04\\ud83d\\udc36"",
                        },
                      },
                    },
                    "location": 116,
                    "typeName": {
                      "location": 118,
                      "names": [
                        {
                          "String": {
                            "sval": "jsonpath",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`jsonpath_encoding.sql > line 26 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "TypeCast": {
                    "arg": {
                      "A_Const": {
                        "location": 8,
                        "sval": {
                          "sval": ""\\ud83d\\ud83d"",
                        },
                      },
                    },
                    "location": 24,
                    "typeName": {
                      "location": 26,
                      "names": [
                        {
                          "String": {
                            "sval": "jsonpath",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`jsonpath_encoding.sql > line 26 2`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 38,
                "val": {
                  "TypeCast": {
                    "arg": {
                      "A_Const": {
                        "location": 38,
                        "sval": {
                          "sval": ""\\ude04\\ud83d"",
                        },
                      },
                    },
                    "location": 54,
                    "typeName": {
                      "location": 56,
                      "names": [
                        {
                          "String": {
                            "sval": "jsonpath",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`jsonpath_encoding.sql > line 27 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 37,
                "val": {
                  "TypeCast": {
                    "arg": {
                      "A_Const": {
                        "location": 37,
                        "sval": {
                          "sval": ""\\ud83dX"",
                        },
                      },
                    },
                    "location": 48,
                    "typeName": {
                      "location": 50,
                      "names": [
                        {
                          "String": {
                            "sval": "jsonpath",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`jsonpath_encoding.sql > line 28 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 33,
                "val": {
                  "TypeCast": {
                    "arg": {
                      "A_Const": {
                        "location": 33,
                        "sval": {
                          "sval": ""\\ude04X"",
                        },
                      },
                    },
                    "location": 44,
                    "typeName": {
                      "location": 46,
                      "names": [
                        {
                          "String": {
                            "sval": "jsonpath",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`jsonpath_encoding.sql > line 29 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 70,
                "name": "correct_in_utf8",
                "val": {
                  "TypeCast": {
                    "arg": {
                      "A_Const": {
                        "location": 70,
                        "sval": {
                          "sval": ""the Copyright \\u00a9 sign"",
                        },
                      },
                    },
                    "location": 99,
                    "typeName": {
                      "location": 101,
                      "names": [
                        {
                          "String": {
                            "sval": "jsonpath",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`jsonpath_encoding.sql > line 33 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "name": "correct_everywhere",
                "val": {
                  "TypeCast": {
                    "arg": {
                      "A_Const": {
                        "location": 8,
                        "sval": {
                          "sval": ""dollar \\u0024 character"",
                        },
                      },
                    },
                    "location": 35,
                    "typeName": {
                      "location": 37,
                      "names": [
                        {
                          "String": {
                            "sval": "jsonpath",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`jsonpath_encoding.sql > line 34 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "name": "not_an_escape",
                "val": {
                  "TypeCast": {
                    "arg": {
                      "A_Const": {
                        "location": 8,
                        "sval": {
                          "sval": ""dollar \\\\u0024 character"",
                        },
                      },
                    },
                    "location": 36,
                    "typeName": {
                      "location": 38,
                      "names": [
                        {
                          "String": {
                            "sval": "jsonpath",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`jsonpath_encoding.sql > line 35 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "name": "not_unescaped",
                "val": {
                  "TypeCast": {
                    "arg": {
                      "A_Const": {
                        "location": 8,
                        "sval": {
                          "sval": ""null \\u0000 escape"",
                        },
                      },
                    },
                    "location": 30,
                    "typeName": {
                      "location": 32,
                      "names": [
                        {
                          "String": {
                            "sval": "jsonpath",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`jsonpath_encoding.sql > line 36 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "name": "not_an_escape",
                "val": {
                  "TypeCast": {
                    "arg": {
                      "A_Const": {
                        "location": 8,
                        "sval": {
                          "sval": ""null \\\\u0000 escape"",
                        },
                      },
                    },
                    "location": 31,
                    "typeName": {
                      "location": 33,
                      "names": [
                        {
                          "String": {
                            "sval": "jsonpath",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`jsonpath_encoding.sql > line 37 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 64,
                "val": {
                  "TypeCast": {
                    "arg": {
                      "A_Const": {
                        "location": 64,
                        "sval": {
                          "sval": "$."\\u"",
                        },
                      },
                    },
                    "location": 72,
                    "typeName": {
                      "location": 74,
                      "names": [
                        {
                          "String": {
                            "sval": "jsonpath",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`jsonpath_encoding.sql > line 41 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 37,
                "val": {
                  "TypeCast": {
                    "arg": {
                      "A_Const": {
                        "location": 37,
                        "sval": {
                          "sval": "$."\\u00"",
                        },
                      },
                    },
                    "location": 47,
                    "typeName": {
                      "location": 49,
                      "names": [
                        {
                          "String": {
                            "sval": "jsonpath",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`jsonpath_encoding.sql > line 42 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 36,
                "val": {
                  "TypeCast": {
                    "arg": {
                      "A_Const": {
                        "location": 36,
                        "sval": {
                          "sval": "$."\\u000g"",
                        },
                      },
                    },
                    "location": 48,
                    "typeName": {
                      "location": 50,
                      "names": [
                        {
                          "String": {
                            "sval": "jsonpath",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`jsonpath_encoding.sql > line 43 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 39,
                "val": {
                  "TypeCast": {
                    "arg": {
                      "A_Const": {
                        "location": 39,
                        "sval": {
                          "sval": "$."\\u0000"",
                        },
                      },
                    },
                    "location": 51,
                    "typeName": {
                      "location": 53,
                      "names": [
                        {
                          "String": {
                            "sval": "jsonpath",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`jsonpath_encoding.sql > line 44 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 28,
                "val": {
                  "TypeCast": {
                    "arg": {
                      "A_Const": {
                        "location": 28,
                        "sval": {
                          "sval": "$."\\uaBcD"",
                        },
                      },
                    },
                    "location": 40,
                    "typeName": {
                      "location": 42,
                      "names": [
                        {
                          "String": {
                            "sval": "jsonpath",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`jsonpath_encoding.sql > line 45 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 88,
                "name": "correct_in_utf8",
                "val": {
                  "TypeCast": {
                    "arg": {
                      "A_Const": {
                        "location": 88,
                        "sval": {
                          "sval": "$."\\ud83d\\ude04\\ud83d\\udc36"",
                        },
                      },
                    },
                    "location": 118,
                    "typeName": {
                      "location": 120,
                      "names": [
                        {
                          "String": {
                            "sval": "jsonpath",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`jsonpath_encoding.sql > line 49 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "TypeCast": {
                    "arg": {
                      "A_Const": {
                        "location": 8,
                        "sval": {
                          "sval": "$."\\ud83d\\ud83d"",
                        },
                      },
                    },
                    "location": 26,
                    "typeName": {
                      "location": 28,
                      "names": [
                        {
                          "String": {
                            "sval": "jsonpath",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`jsonpath_encoding.sql > line 49 2`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 38,
                "val": {
                  "TypeCast": {
                    "arg": {
                      "A_Const": {
                        "location": 38,
                        "sval": {
                          "sval": "$."\\ude04\\ud83d"",
                        },
                      },
                    },
                    "location": 56,
                    "typeName": {
                      "location": 58,
                      "names": [
                        {
                          "String": {
                            "sval": "jsonpath",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`jsonpath_encoding.sql > line 50 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 37,
                "val": {
                  "TypeCast": {
                    "arg": {
                      "A_Const": {
                        "location": 37,
                        "sval": {
                          "sval": "$."\\ud83dX"",
                        },
                      },
                    },
                    "location": 50,
                    "typeName": {
                      "location": 52,
                      "names": [
                        {
                          "String": {
                            "sval": "jsonpath",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`jsonpath_encoding.sql > line 51 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 33,
                "val": {
                  "TypeCast": {
                    "arg": {
                      "A_Const": {
                        "location": 33,
                        "sval": {
                          "sval": "$."\\ude04X"",
                        },
                      },
                    },
                    "location": 46,
                    "typeName": {
                      "location": 48,
                      "names": [
                        {
                          "String": {
                            "sval": "jsonpath",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`jsonpath_encoding.sql > line 52 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 70,
                "name": "correct_in_utf8",
                "val": {
                  "TypeCast": {
                    "arg": {
                      "A_Const": {
                        "location": 70,
                        "sval": {
                          "sval": "$."the Copyright \\u00a9 sign"",
                        },
                      },
                    },
                    "location": 101,
                    "typeName": {
                      "location": 103,
                      "names": [
                        {
                          "String": {
                            "sval": "jsonpath",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`jsonpath_encoding.sql > line 56 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "name": "correct_everywhere",
                "val": {
                  "TypeCast": {
                    "arg": {
                      "A_Const": {
                        "location": 8,
                        "sval": {
                          "sval": "$."dollar \\u0024 character"",
                        },
                      },
                    },
                    "location": 37,
                    "typeName": {
                      "location": 39,
                      "names": [
                        {
                          "String": {
                            "sval": "jsonpath",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`jsonpath_encoding.sql > line 57 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "name": "not_an_escape",
                "val": {
                  "TypeCast": {
                    "arg": {
                      "A_Const": {
                        "location": 8,
                        "sval": {
                          "sval": "$."dollar \\\\u0024 character"",
                        },
                      },
                    },
                    "location": 38,
                    "typeName": {
                      "location": 40,
                      "names": [
                        {
                          "String": {
                            "sval": "jsonpath",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`jsonpath_encoding.sql > line 58 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "name": "not_unescaped",
                "val": {
                  "TypeCast": {
                    "arg": {
                      "A_Const": {
                        "location": 8,
                        "sval": {
                          "sval": "$."null \\u0000 escape"",
                        },
                      },
                    },
                    "location": 32,
                    "typeName": {
                      "location": 34,
                      "names": [
                        {
                          "String": {
                            "sval": "jsonpath",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`jsonpath_encoding.sql > line 59 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "name": "not_an_escape",
                "val": {
                  "TypeCast": {
                    "arg": {
                      "A_Const": {
                        "location": 8,
                        "sval": {
                          "sval": "$."null \\\\u0000 escape"",
                        },
                      },
                    },
                    "location": 33,
                    "typeName": {
                      "location": 35,
                      "names": [
                        {
                          "String": {
                            "sval": "jsonpath",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;
